Fix widget on mobile

--- a/source/assets/stylesheets/main.css
+++ b/source/assets/stylesheets/main.css
@@ -2142,16 +2142,19 @@ ol, ul, li {
 .ch-account-container {
   width: 370px;
   height: 215px; }
-  .ch-account-container.has-search {
-    height: 250px; }
-  @media screen and (max-width: 768px) {
+  @media screen and (min-width: 768px) {
+    .ch-account-container.has-search {
+      height: 250px; } }
+  @media screen and (max-width: 767px) {
     .ch-account-container {
       position: fixed;
       width: 100%;
       height: 100%;
-      top: 0 !important;
+      top: 65px !important;
       left: 0 !important;
-      z-index: 2; } }
+      z-index: 2; }
+      .ch-account-container.has-search {
+        top: 0 !important; } }
 
 .ch-account-header {
   display: flex;
@@ -2231,12 +2234,15 @@ ol, ul, li {
     box-shadow: 10px 0px 10px -10px rgba(0, 0, 0, 0.15) inset; }
     .ch-account-content-submenu .ch-dropdown-menu-item.open > .ch-dropdown-menu-item-label:before {
       content: none; }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     .ch-account-content {
-      height: calc(100% - 60px); } }
+      height: 100%; } }
 
 .ch-account-header + .ch-account-content {
   height: calc(100% - 50px); }
+  @media screen and (max-width: 767px) {
+    .ch-account-header + .ch-account-content {
+      height: calc(100% - 65px); } }
 
 .ch-account .ch-dropdown-toggle {
   white-space: nowrap;
