--- a/source/assets/stylesheets/scss/layout/_account.scss
+++ b/source/assets/stylesheets/scss/layout/_account.scss
@@ -3,15 +3,21 @@
     width: 370px;
     height: 215px;
 
-    &.has-search {
-      height: 250px;
+    @media screen and (min-width: 768px) {
+      &.has-search {
+        height: 250px;
+      }
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
+      &.has-search {
+        top: 0 !important;
+      }
+
       position: fixed;
       width: 100%;
       height: 100%;
-      top: 0 !important;
+      top: 65px !important;
       left: 0 !important;
       z-index: 2;
     }
@@ -128,13 +134,17 @@
       }
     }
 
-    @media screen and (max-width: 768px) {
-      height: calc(100% - 60px);
+    @media screen and (max-width: 767px) {
+      height: 100%;
     }
   }
 
   &-header + &-content {
     height: calc(100% - 50px);
+
+    @media screen and (max-width: 767px) {
+      height: calc(100% - 65px);
+    }
   }
 
   .ch-dropdown {
